# terrascale

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
services/user-service/: .dockerignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  pyrightconfig.json
services/user-service/alembic/: env.py
services/user-service/alembic/versions/: 20250402_0001_initial_users.py
services/user-service/src/user_service/: __init__.py  main.py
services/user-service/src/user_service/api/: schemas.py
services/user-service/src/user_service/api/routes/: __init__.py  users.py
services/user-service/src/user_service/core/: config.py  logging_config.py  telemetry.py
services/user-service/src/user_service/db/: session.py
services/user-service/src/user_service/models/: __init__.py  user.py
services/user-service/tests/: conftest.py  test_api.py  test_schemas.py
